style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  font-family: "Montserrat", sans-serif;
  font-weight: 300;
  line-height: 1rem;
  letter-spacing: 0.08rem;
}

.app {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column;
  font-size: 1.4rem;
  font-weight: inherit;
  background-color: #1f91c6;
  height: 100vh;
  width: 100vw;
}

.timer-wrapper {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 20rem;
  width: 60rem;
  background-color: transparent;
  border-radius: 3px;
  box-shadow: none;
}

.clock-column {
  margin-right: 7rem;
  text-align: center;
  position: relative;
}

.clock-column::after {
  content: ":";
  display: block;
  height: 0.25rem;
  width: 0.25rem;
  font-size: 36px;
  font-weight: 200;
  color: #131313;
  position: absolute;
  top: 60px;
  right: -35px;
}

.clock-column:last-child {
  margin-right: 0;
}

.clock-column:last-child::after {
  display: none;
}

.clock-label {
  padding-top: 10px;
  text-transform: uppercase;
  color: #131313;
  font-size: 14px;
  text-align: center;
  border-top: 1px solid rgba(19, 19, 19, 0.5);
}

.clock-timer {
  color: #131313;
  font-size: 36px;
  line-height: 1;
  margin: 40px 0;
}

.date-wrapper {
  clear: both;
  text-align: center;
  max-width: 500px;
  width: 100%;
  margin: 0 auto 10px;
}

#date-input {
  padding: 5px;
  border: 0;
  border-radius: 3px;
  font-size: 16px;
  font-family: monospace;
  text-align: center;
  color: #010101;
  background-color: #fff;
}

